--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 }
 
 /*  Header  */
-
 .header {
     display: flex;
     align-items: center;
@@ -90,7 +89,6 @@ body {
     padding: 10px 0;
     z-index: 99;
 }
-
 /*  Banner  */
 
 .banner-area {
@@ -390,16 +388,6 @@ img {
     opacity: 0.8;
 }
 
-.rating {
-    display: flex;
-    list-style: none;
-}
-
-.rating .fa-star {
-    margin-right: 0.4rem;
-    color: #0000;
-}
-
 .category {
     padding-top: 0.2rem;
     font-size: 1rem;
@@ -684,6 +672,7 @@ img {
 }
 
 /* Medium Screen */
+
 @media only screen and (min-width:992px) and (max-width:1200px) {
     .container {
         width: 970px;
@@ -716,6 +705,7 @@ img {
         width: 100%;
         left: 0;
         padding: 10px;
+        padding-left: 80px;
         top: 64px;
         text-align: center;
         display: none;
@@ -767,6 +757,7 @@ img {
         width: 100%;
         left: 0;
         padding: 10px;
+        padding-left: 30px;
         top: 54px;
         text-align: center;
         display: none;
@@ -777,11 +768,11 @@ img {
         display: block;
     }
     .logo{
-        font-size: 18px;
+        font-size: 20px;
     }
     .header a{
         font-size: 15px;
-        padding: 5px 10px;
+        padding: 5px 5px;
     }
     .banner-content{
         width: 100%;
